fix: pagination wraps if list width exceed container width FIX getindiekit/indiekit#550

--- a/packages/frontend/components/pagination/styles.css
+++ b/packages/frontend/components/pagination/styles.css
@@ -9,6 +9,7 @@
 
 .pagination__list {
   display: flex;
+  flex-wrap: wrap;
   margin-inline: calc(var(--space-s) * -1);
 }
 
